<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chatBottomSheet"
        android:enabled="true"
        android:title="@string/chats"
        android:icon="@drawable/ic_baseline_chat_24"
        android:iconTint="@color/chat_profile_bg_color"
        tools:targetApi="o" />
    <item
        android:id="@+id/whatsappUpdatesBottomSheet"
        android:enabled="true"
        android:title="@string/updates"
        android:icon="@drawable/whatspp_status"
        android:iconTint="@color/chat_profile_bg_color"
        tools:targetApi="o" />
    <item
        android:id="@+id/callsBottomSheet"
        android:enabled="true"
        android:title="@string/calls"
        android:icon="@drawable/phone"
        android:iconTint="@color/chat_profile_bg_color"
        tools:targetApi="o" />
</menu>