<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome_screen_bg_color"
    android:fitsSystemWindows="true"
    tools:context=".activities.ProfileInfoSetupActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_setup"
        android:textAlignment="center"
        android:textColor="#D3068E30"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_marginTop="24dp"
        android:text="@string/please_provide_your_name_and_an_optional_profile_photo"
        android:textAlignment="center"
        android:textColor="@color/chat_settings_grey_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profilePictureCardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/profile_info_camera_bg__color"
        app:cardCornerRadius="80dp">

        <ImageView
            android:id="@+id/ivSelectImageForProfilepicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/profilePictureProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/etProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profilePictureCardView"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/settings_page_header_color"
        android:autofillHints="no"
        android:hint="@string/enter_your_name"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSetupProfile"
        style="@style/next_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/next" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/profileSetupProgessBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>